--- a/boards.html
+++ b/boards.html
@@ -67,5 +67,17 @@ polished and completed projects.
         <br>
         <br>
     </p>
+    <!--This a link to the index page.(9/19/24)-->
+    <a href="./index.html">Home</a>
+    <br>
+    <br>
+    <!--Small text (9/19/24)-->
+    <footer>Thomas Burton</footer>
+    <br>
+    <footer>University of Advancing Technology</footer>
+    <br>
+    <footer>2625 W Baseline Rd</footer>
+    <br>
+    <footer>Tempe, AZ 85283</footer>
 </body>
 </html>
