--- a/index.html
+++ b/index.html
@@ -17,5 +17,17 @@
         <!--img is the image tag-->
         <img id = "memeImage" src = "meme.jpg">
     </p>
+    <!--This a link to the boards page.(9/19/24)-->
+    <a href="./boards.html">Boards</a>
+    <br>
+    <br>
+    <!--Small text (9/19/24)-->
+    <footer>Thomas Burton</footer>
+    <br>
+    <footer>University of Advancing Technology</footer>
+    <br>
+    <footer>2625 W Baseline Rd</footer>
+    <br>
+    <footer>Tempe, AZ 85283</footer>
 </body>
 </html>
